<resources>
    <string name="app_name">Lost&amp;Found</string>
    <string name="action_settings">Settings</string>

    <string name="btn_arrow">Change</string>

    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="complaintId">Complaint Id</string>
    <string name="trainName">Train Name</string>
    <string name="contactName">Contact Name</string>
    <string name="contactNumber">Contact Number</string>
    <string name="submitButton">SUBMIT</string>

    <string name="hello_worldBlue">Hello world!</string>
    <string name="reward">Thanks for helping our friend to get his lost item back. As a token of appreciation you get MYNTRA Cashback Voucher of Rs:500. Use Promocode MINDICATOR_MYNTRA to get cashback.</string>


</resources>
