<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:orientation="vertical"
              tools:context=".view.DetailsActivity">

    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                <ImageView
                        android:id="@+id/iv_image"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_marginBottom="10dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_launcher_background" />

                <TextView
                        android:id="@+id/tv_cat_tags"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/iv_image"
                        android:layout_marginTop="10dp"
                        android:textSize="20sp"
                        tools:text="Category Tags" />

                <TextView
                        android:id="@+id/tv_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_cat_tags"
                        android:layout_marginTop="10dp"
                        android:textSize="20sp"
                        tools:text="@string/description" />

                <TextView
                        android:id="@+id/tv_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_description"
                        android:layout_marginTop="10dp"
                        android:textSize="20sp"
                        tools:text="@string/date" />

                <TextView
                        android:id="@+id/tv_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_date"
                        android:layout_marginTop="10dp"
                        android:textSize="20sp"
                        android:visibility="gone"
                        tools:text="@string/time" />

                <TextView
                        android:id="@+id/tv_complaint_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_time"
                        android:layout_marginTop="10dp"
                        android:textSize="20sp"
                        tools:text="@string/complaintId" />

                <TextView
                        android:id="@+id/tv_train_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_complaint_id"
                        android:layout_marginTop="10dp"
                        android:textSize="20sp"
                        tools:text="@string/trainName" />

                <TextView
                        android:id="@+id/tv_contact_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_train_name"
                        android:layout_marginTop="10dp"
                        android:textSize="20sp"
                        tools:text="@string/contactName" />

                <TextView
                        android:id="@+id/tv_contact_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_contact_name"
                        android:layout_marginTop="10dp"
                        android:textSize="20sp"
                        tools:text="@string/contactNumber" />

                <ImageView
                        android:id="@+id/iv_map"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:layout_marginBottom="20dp"
                        android:layout_marginTop="10dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/map"
                        android:layout_below="@id/tv_contact_number"/>
            </RelativeLayout>
        </ScrollView>
    </android.support.v7.widget.CardView>
</LinearLayout>